Dark mode part 10: fix scoreboard cur rank in dark mode

--- a/judgels-frontends/raphael/src/routes/contests/contests/single/scoreboard/ScoreboardTable/ScoreboardTable.scss
+++ b/judgels-frontends/raphael/src/routes/contests/contests/single/scoreboard/ScoreboardTable/ScoreboardTable.scss
@@ -1,7 +1,8 @@
 @import '../../../../../../styles/base';
 
 table.scoreboard__content {
-  td, th {
+  td,
+  th {
     text-align: center;
     border: 1px #dee0e1 solid;
     vertical-align: middle;
@@ -24,7 +25,8 @@ table.scoreboard__content {
     height: 40px;
   }
 
-  .my-rank, .my-rank td {
+  .my-rank,
+  .my-rank td {
     background-color: #fcf8e3 !important;
   }
 
@@ -43,5 +45,12 @@ table.scoreboard__content {
   td {
     padding-top: 5px;
     padding-bottom: 5px;
+  }
+}
+
+.bp4-dark table.scoreboard__content {
+  .my-rank,
+  .my-rank td {
+    background-color: $dark-gray1 !important;
   }
 }
